第一周学习笔记